--- a/Chicago/src/main/resources/message/label_ko.properties
+++ b/Chicago/src/main/resources/message/label_ko.properties
@@ -31,6 +31,8 @@ header.login = 로그인
 header.nm = 비회원
 
 header.board = 게시판
+header.noticBoard = 공지사항
+header.secretBoard = 1:1게시판
 
 join.required=필수항목입니다.
 join.email=이메일이 올바르지 않습니다.
