--- a/Chicago/src/main/resources/message/label_ko.properties
+++ b/Chicago/src/main/resources/message/label_ko.properties
@@ -2,10 +2,10 @@ header.menu = 매장안내
 
 header.book = 도서
 header.major = 전공서적
-header.novel = 소설
-header.poem = 시
-header.essay = 에세이
-header.fairytale = 동화
+header.novel = 자격수험
+header.poem = 컴퓨터
+header.essay = 여행
+header.fairytale = 취미
 
 header.event = 이벤트
 header.eventView = 일정보기
@@ -30,7 +30,7 @@ header.saList = 내역
 header.login = 로그인
 header.nm = 비회원
 
-header.board = 게시판
+header.board = 고객센터
 header.noticBoard = 공지사항
 header.secretBoard = 1:1게시판
 
