--- a/Chicago/src/main/resources/message/label_ko.properties
+++ b/Chicago/src/main/resources/message/label_ko.properties
@@ -59,6 +59,17 @@ short=5글자 이상 입력해주세요.
 notName.name=정상적인 이름이 아닙니다.
 phonemiss=휴대폰 번호가 잘못됐습니다.
 
+book.cate1=자격서·수험서
+book.cate2=전공·대학교재
+book.cate3=소설
+book.cate4=여행·취미레져
+newBook.hd1=자격서·수험서
+newBook.hd2=전공·대학교재
+newBook.hd3=소설
+newBook.hd4=여행·취미레져
+con.subject=신간소개
+
+
 clause.content=제 1 장 총 칙\
 제1조 목적\
 본 약관은 서비스 이용자가 주식회사 Chicago books(이하 “회사”라 합니다)가 제공하는 온라인상의 인터넷 서비스(이하 “서비스”라고 하며, 접속 가능한 유∙무선 단말기의 종류와는 상관없이 이용 가능한 “회사”가 제공하는 모든 “서비스”를 의미합니다. 이하 같습니다)에 회원으로 가입하고 이를 이용함에 있어 회사와 회원(본 약관에 동의하고 회원등록을 완료한 서비스 이용자를 말합니다. 이하 “회원”이라고 합니다)의 권리•의무 및 책임사항을 규정함을 목적으로 합니다.<br/> \
