added radio button

--- a/Chicago/src/main/resources/message/label_ko.properties
+++ b/Chicago/src/main/resources/message/label_ko.properties
@@ -88,6 +88,10 @@ del.info1 = CHICAGO BOOKS 도서 상품은 택배로 배송되며, 출고완료 
 del.info2 = 출고가능 시간이 서로 다른 상품을 함께 주문할 경우 출고가능 시간이 가장 긴 상품을 기준으로 배송됩니다.
 del.info3 = 군부대, 교도소 등 특정기관은 우체국 택배만 배송가능하여, CHICAGO BOOKS 외 타업체 배송상품인 경우 발송되지 않을 수 있습니다.
 del.info4 = 배송비 : 2,500원
+radio.ti1 = 통합검색
+radio.ti2 = 제목검색
+radio.ti3 = 저자검색
+radio.ti4 = 출판사검색
 
 clause.content=제 1 장 총 칙\
 제1조 목적\
