added search function

--- a/Chicago/src/main/resources/message/label_ko.properties
+++ b/Chicago/src/main/resources/message/label_ko.properties
@@ -61,7 +61,7 @@ error=정확히 입력해주세요.
 short=5글자 이상 입력해주세요.
 notName.name=정상적인 이름이 아닙니다.
 phonemiss=휴대폰 번호가 잘못됐습니다.
-
+#도서정페이지
 book.cate1=자격서·수험서
 book.cate2=전공·대학교재
 book.cate3=소설
